--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -1,6 +1,7 @@
 .countries-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .country-card {
@@ -18,6 +19,19 @@ h1 {
 .flag-img {
     width: 100%;
     height: 250px;
+}
+
+.input-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.search-bar {
+    margin: 1rem 0;
+    width: 20%;
+    height: 40px;
+    font-size: 1.5em;
+    padding-left: 00.5rem;
 }
 
 @media (max-width: 900px) {
