--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -5,10 +5,10 @@
 }
 
 .country-card {
-    background-color: lightgray;
+    background-color: rgba(211, 211, 211, 0.37);
     margin: 0.5rem;
-    padding: 3rem;
-    width: 20%;
+    padding: 2rem;
+    width: 15%;
 }
 
 h1 {
@@ -18,7 +18,7 @@ h1 {
 
 .flag-img {
     width: 100%;
-    height: 250px;
+    height: 150px;
 }
 
 .input-container {
@@ -42,11 +42,17 @@ h1 {
     padding-left: 00.5rem;
 }
 
-/* @media (max-width: 1160px) {
+@media (max-width: 1160px) {
+    .country-card {
+        width: 20%;
+    }
     .search-bar {
         width: 30%;
     }
-} */
+    .select-container {
+        width: 25%;
+    }
+}
 
 @media (max-width: 900px) {
     .countries-container {
