--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -1,107 +1,95 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 body {
-    background-color: #dfdfdf;
-}
-
-.countries-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.country-card {
-    background: linear-gradient(45deg, hsl(206deg 34% 82%), transparent);
-    border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    margin: 0.5rem;
-    padding: 2rem;
-    width: 15%;
-    text-decoration: none;
-    color: #000000;
-    text-align: center;
-}
-
-.country-name {
-    min-height: 55px;
-}
-
-.country-name > h1 {
-    font-size: 1.5em;
-    margin-top: 2.5rem;
-}
-
-.country-details {
-    min-height: 30px;
-}
-
-.flag-img {
-    width: 100%;
-    height: 150px;
+  background-color: #dfdfdf;
+  box-sizing: border-box;
 }
 
 .input-container {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #696969;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  min-height: 100px;
+
+  @media (max-width: 550px) {
+    flex-direction: column;
+  }
 }
 
-.search-bar {
-    margin: 1rem 0;
-    width: 20%;
-    height: 40px;
-    font-size: 1.5em;
-    padding-left: 00.5rem;
+.input-container > .search-bar {
+  width: 300px;
+  cursor: text;
+
+  @media (max-width: 550px) {
+    width: 90%;
+  }
 }
 
-.select-container {
-    margin: 1rem 0;
-    width: 20%;
-    height: 40px;
-    font-size: 1.5em;
-    padding-left: 00.5rem;
+.input-container > select {
+  width: 200px;
+  cursor: pointer;
+
+  @media (max-width: 550px) {
+    width: 90%;
+  }
 }
 
-@media (max-width: 1160px) {
-    .country-card {
-        width: 20%;
-    }
-    .search-bar {
-        width: 30%;
-    }
-    .select-container {
-        width: 25%;
-    }
+.input-container > input,
+.input-container > select {
+  min-height: 45px;
+  font-size: 16px;
+  padding: 6px 10px;
+  font-family: inherit;
+  border-radius: 2px;
+  border: none;
+  border-bottom: 3px solid transparent;
+  display: block;
+  transition: all 0.3s;
 }
 
-@media (max-width: 900px) {
-    .countries-container {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-    }
-    .country-card {
-        width: 65%;
-        margin: 0.7rem auto;
-        padding: 1.5rem;
-    }
-    .flag-img {
-        width: 50%;
-        height: auto;
-    }
+.input-container > input:focus,
+.input-container > select:focus {
+  outline: none;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid #2093cc;
+}
 
-    .country-name {
-        min-height: 0;
-    }
-    
-    .country-details {
-        min-height: 0;
-    }
-    .search-bar {
-        width: 50%;
-        font-size: 1em;
-        margin-right: 0.5rem;
-    }
-    .select-container {
-        width: 40%;
-        font-size: 1em;
-        margin-left: 0.5rem;
-    }
+.countries-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: 150px auto;
+}
+
+.country-card {
+  display: grid;
+  justify-items: center;
+  background: linear-gradient(45deg, #c1d3e1, transparent);
+  border-radius: 6px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 20px;
+}
+
+.country-card > img {
+  width: 100%;
+  max-width: 250px;
+  height: 140px;
+}
+
+.country-card > .country-name {
+  margin: 20px auto;
+}
+
+.country-card > .country-details > p {
+  margin: 10px auto;
 }
