--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -82,14 +82,21 @@ body {
 
 .country-card > img {
   width: 100%;
-  max-width: 250px;
   height: 140px;
 }
 
 .country-card > .country-name {
   margin: 20px auto;
+  text-align: center;
 }
 
 .country-card > .country-details > p {
   margin: 10px auto;
+  text-align: center;
+}
+
+.country-card > img,
+.country-card > .country-name,
+.country-details > p {
+  max-width: 250px;
 }
